Create style for button

--- a/index.html
+++ b/index.html
@@ -55,15 +55,17 @@
             </tr>
 
             <tr class="price-table__row">
-                <td class="price-table__col"></td>
                 <td class="price-table__col">
-                    <a href="" class="button button--blue">Подключить</a>
+                    <a href="" class="button button--green button--border">Подключен</a>
                 </td>
                 <td class="price-table__col">
-                    <a href="" class="button button--blue">Подключить</a>
+                    <a href="" class="button button--green">Подключить</a>
                 </td>
                 <td class="price-table__col">
-                    <a href="" class="button button--blue">Подключить</a>
+                    <a href="" class="button button--green">Подключить</a>
+                </td>
+                <td class="price-table__col">
+                    <a href="" class="button button--green">Подключить</a>
                 </td>
             </tr>
 
@@ -84,10 +86,18 @@
             </tr>
 
             <tr class="price-table__row">
-                <td class="price-table__col"></td>
-                <td class="price-table__col"><a href="https://slack.com/pricing/free" data-clog-manual="learn_more_standard" aria-label="Learn more about the free plan">Презентация</a></td>
-                <td class="price-table__col"><a href="https://slack.com/pricing/standard" data-clog-manual="learn_more_standard" aria-label="Learn more about the standard plan">Презентация</a></td>
-                <td class="price-table__col"><a href="https://slack.com/pricing/plus" data-clog-manual="learn_more_plus" aria-label="Learn more about the plus plan">Презентация</a></td>
+                <td class="price-table__col">
+                    <a href="" class="price-table__presentation">Презентация</a>
+                </td>
+                <td class="price-table__col">
+                    <a href="" class="price-table__presentation">Презентация</a>
+                </td>
+                <td class="price-table__col">
+                    <a href="" class="price-table__presentation">Презентация</a>
+                </td>
+                <td class="price-table__col">
+                    <a href="" class="price-table__presentation">Презентация</a>
+                </td>
             </tr>
 
 
@@ -101,7 +111,7 @@
                 <td class="price-table__col"></td>
                 <td class="price-table__col"></td>
             </tr>
-            
+
             <tr class="price-table__row">
                 <td class="price-table__col">Доступ к базе грузов</td>
                 <td class="price-table__col"></td>
@@ -139,16 +149,16 @@
 
             <tr class="price-table__row">
                 <td class="price-table__col">
-                    <a href="" class="button button--blue">Update</a>
+                    <a href="" class="button button--green button--border">Подключен</a>
                 </td>
                 <td class="price-table__col">
-                    <a href="" class="button button--blue">Update</a>
+                    <a href="" class="button button--green">Подключить</a>
                 </td>
                 <td class="price-table__col">
-                    <a href="" class="button button--blue">Update</a>
+                    <a href="" class="button button--green">Подключить</a>
                 </td>
                 <td class="price-table__col">
-                    <a href="" class="button button--blue">Update</a>
+                    <a href="" class="button button--green">Подключить</a>
                 </td>
             </tr>
         </tbody>
