Hiden hr line yellow.

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <tr class="price-table__row">
                 <td class="price-table__col"></td>
                 <td class="price-table__col">
-                    <hr class="price-table__splite">
+                    <!-- <hr class="price-table__splite"> -->
                     <p class="price-table__desc"></p>
                 </td>
                 <td class="price-table__col">
-                    <hr class="price-table__splite">
+                    <!-- <hr class="price-table__splite"> -->
                     <p class="price-table__desc"></p>
                 </td>
                 <td class="price-table__col">
