Added alert block

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="content/css/price-table.css">
     <link rel="stylesheet" href="content/css/utilits.css">
+    <link rel="stylesheet" href="content/css/alert.css">
 </head>
 
 <body>
@@ -83,6 +84,35 @@
                 <td class="price-table__col">
                     <hr class="price-table__splite">
                     <p class="price-table__desc">Экономия 45 BYN</p>
+                </td>
+            </tr>
+
+            <tr class="price-table__row">
+                <td class="price-table__col">
+                </td>
+                <td class="price-table__col">
+                    <div class="alert alert-info t--c">
+                        последнее подключение:
+                        <p><b>43 мин.</b> назад</p>
+                    </div>
+                </td>
+                <td class="price-table__col">
+                    <div class="alert alert-info t--c">
+                        последнее подключение:
+                        <p><b>43 мин.</b> назад</p>
+                    </div>
+                </td>
+                <td class="price-table__col">
+                    <div class="alert alert-info t--c">
+                        последнее подключение:
+                        <p><b>43 мин.</b> назад</p>
+                    </div>
+                </td>
+                <td class="price-table__col">
+                    <div class="alert alert-info t--c">
+                        последнее подключение:
+                        <p><b>43 мин.</b> назад</p>
+                    </div>
                 </td>
             </tr>
 
